--- a/src/pages/teamData/teamData.html
+++ b/src/pages/teamData/teamData.html
@@ -7,4 +7,5 @@
 <ion-content padding>
     <ion-label>{{values.teamid}}</ion-label>
     <ion-label>{{values.teamNum}}</ion-label>
+    <ion-label>{{desc.detail}}</ion-label>
 </ion-content>
