Basic Working app

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,11 @@
 </ion-header>
 
 <ion-content padding>
+<p id="value"></p>
+  <ion-buttons>
+    <button ion-button icon-only  color = "gold" (click) = "view();">
+      <ion-icon name="refresh"></ion-icon>
+    </button>
+    </ion-buttons>
 
 </ion-content>
