--- a/src/pages/teamData/teamData.html
+++ b/src/pages/teamData/teamData.html
@@ -6,6 +6,7 @@
     </ion-header>
 <ion-content padding>
     <ion-label>{{values.teamid}}</ion-label>
-    <ion-label>{{values.teamNum}}</ion-label>
-    <ion-label>{{desc.detail}}</ion-label>
+    <ion-label>{{values.teamDesc}}</ion-label>
+    <!--<ion-label>{{values.teamNum}}</ion-label>
+    <ion-label>{{desc.detail}}</ion-label>-->
 </ion-content>
