--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,14 @@
-<ion-header>
+<!--<ion-header>
   <ion-navbar>
     <ion-title>Home</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header>-->
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+<ion-content padding style="background: #7D2E3D;">
+<button ion-button block menuToggle right>
+    <ion-icon name="menu"></ion-icon>
+</button>
+  <h2>Hello there</h2>
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
@@ -14,4 +17,5 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+  <ion-icon name="arrow-up"></ion-icon>
 </ion-content>
