--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,8 +4,8 @@
   </ion-navbar>
 </ion-header>-->
 
-<ion-content padding style="background: #7D2E3D;">
-<button ion-button block menuToggle right>
+<ion-content padding style="background: #FF0000;">
+<button ion-button menuToggle right id="hamburger">
     <ion-icon name="menu"></ion-icon>
 </button>
   <h2>Hello there</h2>
