--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>-->
 
-<ion-content padding style="background: #FF0000;">
+<ion-content padding style="background: #7D2E3D;">
 <button ion-button menuToggle right id="hamburger">
     <ion-icon name="menu"></ion-icon>
 </button>
