--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,11 +4,11 @@
   </ion-navbar>
 </ion-header>-->
 
-<ion-content padding style="background: #7D2E3D;">
+<ion-content padding style="background: #fff;">
 <button ion-button menuToggle right id="hamburger">
     <ion-icon name="menu"></ion-icon>
 </button>
-  <h2>Hello there</h2>
+  <h1>Welcome.</h1>
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
