--- a/src/pages/teamEditData/teamEditData.html
+++ b/src/pages/teamEditData/teamEditData.html
@@ -15,3 +15,4 @@
       </ion-item>
       <button ion-button outline (click)="SaveandDismiss(teamId.value,details.value); teamId.value=''; details.value=''" >Submit</button>
 </ion-content>
+<canvas id="cnvs" height="200" width="200" style="border:1px solid #148a53;"></canvas>
