--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,14 +4,14 @@
   </ion-navbar>
 </ion-header>-->
 
-<ion-content padding style="background: #fff;">
+<ion-content padding style="background: #ffffff;">
 <button ion-button menuToggle right id="hamburger">
     <ion-icon name="menu"></ion-icon>
 </button>
-  <h1>Welcome.</h1>
+  <h1>Verwelkomen.</h1>
   <p>
     This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    that are going to primarily use a Tabbed UI. Luis was here.
   </p>
   <p>
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
