--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
 <button ion-button menuToggle right id="hamburger">
     <ion-icon name="menu"></ion-icon>
 </button>
-  <h1>Verwelkomen.</h1>
+  <h1>Verwelkomen. Sp</h1>
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI. Luis was here.
