--- a/src/pages/teamPage/teamPage.html
+++ b/src/pages/teamPage/teamPage.html
@@ -29,14 +29,15 @@
     <button ion-button outline (click)="submitData(name.value); name.value=''" >Submit</button>
 
     <ion-list no-lines id="il">
-      <!-- <ion-item *ngFor="let team of teams" class = "maroonred">          
+       <ion-item *ngFor="let team of teams" class = "maroonred">  
+          <ion-avatar item-start>
+              <img [src]=team.teamImg>
+            </ion-avatar>        
         <button ion-button clear (click) =" showModal(team.teamid);" (press)="pressEvent($event,team.teamid)" class = "maroonred">
-            <ion-avatar item-start>
-                <img src=team.teamImg>
-              </ion-avatar>
+            
           {{team.teamName}}
         </button>
-        </ion-item> -->
+        </ion-item> 
     </ion-list>
     <ion-fab right bottom>
       <button ion-fab color="light"><ion-icon name="add"></ion-icon></button>
