i dont think its stable

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,17 +5,15 @@
 </ion-header>-->
 
 <ion-content padding style="background: #ffffff;">
-<button ion-button menuToggle right id="hamburger">
-    <ion-icon name="menu"></ion-icon>
-</button>
-  <h1>Verwelkomen. Sp</h1>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI. Luis was here.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
-  <ion-icon name="arrow-up"></ion-icon>
+    <ul>
+      <li><button ion-button menuToggle right id="hamburger">
+        <ion-icon name="menu"></ion-icon>
+      </button></li>
+      <li class="headtext">Dragons Scouting App</li>
+    </ul>
+
+  <br>
+  <div id="body">
+
+  </div>
 </ion-content>
