Makes Things Pretty

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,19 +1,56 @@
+
 <!--<ion-header>
   <ion-navbar>
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>-->
 
-<ion-content padding style="background: #ffffff;">
+<ion-content padding style="background: #525172;">
     <ul>
       <li><button ion-button menuToggle right id="hamburger">
         <ion-icon name="menu"></ion-icon>
       </button></li>
       <li class="headtext">Dragons Scouting App</li>
     </ul>
+    <head>
 
+    </head>
   <br>
-  <div id="body">
+  <!-- <div id='banner-left'>
+    <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Dragon_from_Chinese_Dragon_Banner.svg/2000px-Dragon_from_Chinese_Dragon_Banner.svg.png' alt='Dragon Border Left' height="1000" width="400">
+  </div>
+
+  <div id='banner-right'>
+    <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Dragon_from_Chinese_Dragon_Banner_Red_Version.svg/2000px-Dragon_from_Chinese_Dragon_Banner_Red_Version.svg.png' height='1000' width='400'>
+  </div> -->
+
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <div class='paralax1'></div>
+
+
+  <div id='body' style="background-color: #dbd6d3; font-size:36px;">
+
+    Dragon Robotics is a robotics club based in Collierville, Tennessee. We have 5 VEX teams and an FRC team. Our FRC
+    team, Team #5002, has been active for 5 years. Our first year we won Rookie All-Star at Smokey Mountains Regionals
+    and went to worlds. We also got to go to worlds our 4th year. This is our 5th year, PowerUp, and we are preparing
+    to be one of the best.obotics is a robotics club based in Collierville, Tennessee. We have 5 VEX teams and an FRC team. Our FRC
+    team, Team #5002, has been active for 5 years. Our first year we won Rookie All-Star at Smokey Mountains Regionals
+    and went to worlds. We also got to go to worlds our 4th year. This is our 5th year, PowerUp, and we are preparing
+    to be one of the best.
 
   </div>
+
+  <div class='paralax2' style="height:400px"></div>
+  <div id='body'>
+    This app was desgned for the purpse of helping teams organize and gather data about other competeing frc teams. This app provides many
+    differant and varrying ways of observing the data that is inserted into it. The graphs tab provides a wide variety of options of data
+    show. To insert data about teams into the app, go to the "Edit Data" tab. This will show a list of the teams with data already inputed,
+    along with a button that will prompt a window with options for a new team.
+
+</div>
+<button tappable ion-item (click)="topfuntion()" class='GoToTop'>
+  <ion-icon name='arrow-dropup'></ion-icon>
+</button>
+
+
 </ion-content>
